# Rust-NBody

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/world/: mod.rs
