[package]
name = "nbody"
version = "0.1.0"
authors = ["Steven Ireland <scientastersteve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.13.0"
gl = "0.10.0"
nanovg = { version = "1.0.2", features = ["gl3"] }